--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Unfitnotes1"
         tools:targetApi="31">
         <activity
+            android:name=".Back"
+            android:exported="false" />
+        <activity
+            android:name=".Abs"
+            android:exported="false" />
+        <activity
             android:name=".calendar"
             android:exported="false" />
         <activity
