--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,21 @@
         android:theme="@style/Theme.Unfitnotes1"
         tools:targetApi="31">
         <activity
+            android:name=".Shoulder"
+            android:exported="false" />
+        <activity
+            android:name=".Tricep"
+            android:exported="false" />
+        <activity
+            android:name=".Legs"
+            android:exported="false" />
+        <activity
+            android:name=".Chest"
+            android:exported="false" />
+        <activity
+            android:name=".biceps"
+            android:exported="false" />
+        <activity
             android:name=".Back"
             android:exported="false" />
         <activity
